--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,46 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+
+.bookdetails-flex-ctn {
+  display: flex;
+  flex-direction:column;
+  justify-content: center;
+  align-items: center;
+}
+
+.book-details-row-ctn{
+  display: flex;
+  flex-direction:row;
+  width:100%;
+  height:80vh;
+  justify-content: space-around;
+  padding:20px;
+}
+
+.book-image-col{
+  width:500px;
+  height:500px;
+}
+
+.book-details-col{
+  display: flex;
+  flex-direction:column;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.nav-bar-book-details{
+  display: flex;
+  flex-direction:row;
+  width:100%;
+  height:8vh;
+  justify-content: flex-start;
+  align-items: flex-start;
+  background-color: rgb(148, 145, 148);
+}
+
+.home-arrow{
+  margin:20px;
+}
