--- a/src/index.css
+++ b/src/index.css
@@ -87,23 +87,22 @@ code {
   flex-direction:column;
   justify-content: flex-start;
   align-items: center;
-  background-color: rgb(231, 207, 93);
   border:1px dot-dash black;
   border-radius: 5px;
   width:200px;
   height:35px;
   font-size: 20px;
+  padding:3px;
 }
 
-.warning-out-of-stock{
-  display: flex;
-  flex-direction:column;
-  justify-content: flex-start;
-  align-items: center;
-  background-color: rgb(234, 67, 67);
-  border:1px dot-dash black;
-  border-radius: 5px;
-  width:200px;
-  height:35px;
-  font-size: 20px;
+.no-reviews-warning{
+  background-color: rgb(231, 207, 93);
+}
+
+.out-of-stock{
+  background-color: rgb(239, 79, 79);
+}
+
+.in-stock{
+  background-color: rgb(119, 227, 65);
 }
